# dhcp-notify

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yml
dhcp_notify/: __init__.py
etc/: dhcp_notify  dhcp_notify.toml
examples/: dhcp_notify.toml
src/: dhcp_notify
src/dhcp_notify/: __init__.py  config.py  email_notify.py
test/: __init__.py  conftest.py  test_config.py  test_dhcp_notify.py
test/test_email_notify/: test_make_email.py  test_send_email.py
