[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "dhcp-notify"
module = "dhcp_notify"
author = "Heinrich Kruger"
author-email = "heindsight@kruger.dev"
home-page = "https://github.com/heindsight/dhcp-notify"
description-file = "README.rst"
keywords = "dnsmasq dhcp"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
requires-python = "~=3.6"
requires = [
    "attrs",
    "toml",
]

[tool.flit.metadata.requires-extra]
dev = [
    "pdbpp",
]
test = [
    "black",
    "flake8",
    "isort ~= 5.0.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "rstcheck",
]

[tool.flit.scripts]
dhcp-notify = "dhcp_notify:main"

[tool.isort]
profile="black"
lines_after_imports = 2
