[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dhcp-notify"
authors = [
    {name = "Heinrich Kruger", email = "heindsight@kruger.dev"}
]
readme = "README.rst"
dynamic = ["version", "description"]
keywords = ["dnsmasq", "dhcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = "~=3.6"
dependencies = [
    "attrs",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
]
test = [
    "black",
    "flake8",
    "isort ~= 5.0.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-randomly",
    "rstcheck",
]

[project.urls]
homepage = "https://github.com/heindsight/dhcp-notify"

[project.scripts]
dhcp-notify = "dhcp_notify:main"

[tool.flit.module]
name = "dhcp_notify"

[tool.flit.sdist]
exclude = [".github/", ".gitignore"]

[tool.isort]
profile="black"
lines_after_imports = 2
